--- a/MyWeb/src/main/webapp/resources/css/style.css
+++ b/MyWeb/src/main/webapp/resources/css/style.css
@@ -1,13 +1,12 @@
 ﻿/*=========웹폰트 선언=========*/
 @import
-	url('https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap')
-	;
+	url('https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap');
 /*===========================*/
-
 /*디자인 시작시 기본 선언*/
-* { /* 기본선언: 마딩, 패딩 0, 요소크기에 padding, border값을 포함 x*/
-	padding: 0;
-	margin: 0;
+/* 기본선언: 마딩, 패딩 0, 요소크기에 padding, border값을 포함 x*/
+* {
+	padding:0;
+	margin:0;
 	box-sizing: border-box;
 }
 
@@ -32,7 +31,8 @@ input, textarea, button, select {
 }
 
 ul, ol, dl, li {
-	list-style: none /*순서 요소들이 리스트스타일을 업앤다 */
+	list-style: none; /*순서 요소들이 리스트스타일을 업앤다 */
+	
 }
 
 .btn {
@@ -109,6 +109,56 @@ ul.nav li.drophover:hover > ul.dropdown-menu {
 .slide-list {
 	padding: 0;
 }
+
+/*======이중드롭다운=======*/
+.dropdown-submenu {
+    position: relative;
+}
+
+.dropdown-submenu>.dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -6px;
+    margin-left: -1px;
+    -webkit-border-radius: 0 6px 6px 6px;
+    -moz-border-radius: 0 6px 6px;
+    border-radius: 0 6px 6px 6px;
+}
+
+.dropdown-submenu:hover>.dropdown-menu {
+    display: block;
+}
+
+.dropdown-submenu>a:after {
+    display: block;
+    content: " ";
+    float: right;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 5px 0 5px 5px;
+    border-left-color: #ccc;
+    margin-top: 5px;
+    margin-right: -10px;
+}
+
+.dropdown-submenu:hover>a:after {
+    border-left-color: #fff;
+}
+
+.dropdown-submenu.pull-left {
+    float: none;
+}
+
+.dropdown-submenu.pull-left>.dropdown-menu {
+    left: -100%;
+    margin-left: 10px;
+    -webkit-border-radius: 6px 0 6px 6px;
+    -moz-border-radius: 6px 0 6px 6px;
+    border-radius: 6px 0 6px 6px;
+}
+
 
 /* ===================================
     Footer style
@@ -421,7 +471,7 @@ footer .footer-menu li a {
 }
 
 .reply-input>.form-control {
-	width: 200px;
+	width: 150px;
 	margin-bottom: 5px;
 }
 
